Fix overflowing long texts in add menu

--- a/Resources/public/css/styles.css
+++ b/Resources/public/css/styles.css
@@ -130,6 +130,7 @@ body > .header .logo {
 
 .dropdown-add .dropdown-menu > li > a {
     white-space: normal;
+    overflow: hidden;
 }
 
 /* top right */
